src/css/app.sass
// app global css in Sass form
::selection
  background: var(--q-primary)
  color: #ffffff
::-moz-selection
  background: var(--q-primary)
  color: #ffffff
.selectable
  -webkit-user-select: auto
  -moz-user-select: auto
  -ms-user-select: auto
  user-select: auto
.text-size-adjust-md
  -webkit-size-adjust: 120%
  -moz-size-adjust: 120%
  -ms-size-adjust: 120%
  text-size-adjust: 120%
  button, .no-text-size-adjust
    -webkit-size-adjust: auto
    -moz-size-adjust: auto
    -ms-size-adjust: auto
    text-size-adjust: auto
.break-word
  word-wrap: break-word
.hyphen
  word-wrap: break-word
  -webkit-hyphens: auto
  -ms-hyphens: auto
  hyphens: auto
.auto-height
  height: auto
  min-height: auto
.text-underline
  text-decoration: underline
.section-heading
  font-size: 1.25rem
  font-weight: 500
  line-height: 2.5rem
  letter-spacing: 0.00937em
  border-bottom: 1px solid #ccc
  margin-top: 2rem
  margin-bottom: .5rem
  &.q-mt-none
    margin-top: 0
  &+ div
    padding-left: 40px
    @media screen and (max-width: $breakpoint-sm-max)
      padding-left: 16px
.q-btn-toggle
  border-width: 1px
  border-style: solid
  .q-btn .q-icon
    margin-left: 6px
    margin-right: 6px
    font-size: 1.5em
.q-btn-group
  .q-btn
    overflow: hidden
    text-overflow: ellipsis
    line-height: 1.3
.q-card__section+.q-card__section
  padding-top: 0
.q-stepper__step
  counter-reset: section
.dense-avatar .q-item__section--avatar
  min-width: inherit
.warning-dialog .q-card__actions .q-btn
  text-transform: capitalize
.problem-classification, .problem-rating, .intervention
  h6
    margin: 1.5em 0 .5em
    &:first-child
      margin-top: 0
    &.counter:before
      counter-increment: section
      content: counter(section) ". "
.intervention
  .editable-intervention
    counter-reset: intervention
  .counter
    margin: 0.75em 0 0em
  .counter:before
    counter-increment: intervention
    content: counter(intervention) ". "
body
  counter-reset: always
.counter:before
  counter-increment: always
  content: counter(always) ". "
.column-2
  column-count: 2
  column-gap: 2em
  @media screen and (max-width: $breakpoint-xs-max)
    column-count: 1
.column-2-sm
  column-count: 2
  column-gap: 2em
  @media screen and (max-width: $breakpoint-sm-max)
    column-count: 1
.column-3
  column-count: 3
  column-gap: 2em
  @media screen and (max-width: $breakpoint-xs-max)
    column-count: 1
.no-column-break
  -webkit-column-break-inside: avoid // Chrome, Safari
  page-break-inside: avoid // Theoretically FF 20+
  break-inside: avoid-column // IE 11
.text-classification, .icon-classification .q-icon
  color: var(--q-classification)
.bg-classification
  background-color: var(--q-classification)
  background-image: var(--q-classification-gd)
.bg-classification-light
  background-color: var(--q-classification-bg)
.border-classification
  border-color: var(--q-classification)
.text-outcome, .icon-outcome .q-icon
  color: var(--q-outcome)
.bg-outcome
  background-color: var(--q-outcome)
  background-image: var(--q-outcome-gd)
.bg-outcome-light
  background-color: var(--q-outcome-bg)
.border-outcome
  border-color: var(--q-outcome)
.text-intervention, .icon-intervention .q-icon
  color: var(--q-intervention)
.bg-intervention
  background-color: var(--q-intervention)
  background-image: var(--q-intervention-gd)
.bg-intervention-light
  background-color: var(--q-intervention-bg)
.border-intervention
  border-color: var(--q-intervention)
.bg-primary
  background-image: var(--q-primary-gd) !important
.border-primary
  border-color: var(--q-primary)
.border-top-grey
  border-top: 1px solid #cccccc
.border-bottom-grey
  border-bottom: 1px solid #cccccc
.q-message-label
  margin: 0 0 6px 0
.q-message-text
  color: #eeeeee
  background-image: linear-gradient(#f8f8f8, #eeeeee)
  &:last-child
    min-height: 24px
.q-message-stamp
  margin: 0
  position: absolute
  width: 50px
  bottom: 8px
.q-message-sent
  .q-message-container > :last-child
    display: flex
    flex-direction: column
    align-items: flex-end
  .q-message-stamp
    text-align: right
    left: -58px
.q-message-received
  .q-message-stamp
    right: -58px
.text-primary-chat
  color: var(--q-primary-chat)
  &.q-message-text
    background-image: var(--q-primary-chat-bg)
.radius-xs
  border-radius: 4px
.radius-sm
  border-radius: 8px
.radius-md
  border-radius: 12px
.radius-lg
  border-radius: 16px
.radius-xl
  border-radius: 32px
.line-height-10
  line-height: 1rem
.line-height-11
  line-height: 1.1rem
.line-height-12
  line-height: 1.2rem
.line-height-15
  line-height: 1.5rem
body.desktop .hover-primary .q-hoverable:hover > .q-focus-helper
  background-color: var(--q-primary)
.can-hover:hover, .active-background.q-item--active
  position: relative
  &::before
    content: ''
    position: absolute
    width: 100%
    height: 100%
    top: 0
    left: 0
    z-index: -1
    background-color: currentColor
    opacity: .08
.q-item.active-hover-background .q-focus-helper
  background-color: currentColor
  opacity: .06
  position: absolute
  top: 0
  left: 0
  width: 100%
  height: 100%
  pointer-events: none
  border-radius: inherit
  transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.5, 1), opacity 0.4s cubic-bezier(0.25, 0.8, 0.5, 1)
.q-tab
  @media screen and (max-width: $breakpoint-xs-max)
    padding: 0 4px
.q-field--standard .q-field--borderless .q-field__control:before
  border-color: transparent
.limit-page-width
  max-width: 1600px
  margin-left: auto
  margin-right: auto
  &.width-md
    max-width: 1280px
  &.width-sm
    max-width: 1024px
  &.width-xs
    max-width: 800px
.min-height
  min-height: 95vh
.page-padding
  padding: 24px 24px
  @media (max-width: $breakpoint-sm-max)
    padding: 8px
  @media print
    padding: .75cm 0 0
.tabview-padding
  padding: 24px 24px
  @media (max-width: $breakpoint-sm-max)
    padding: 8px
  @media (max-width: $breakpoint-xs-max)
    padding: 8px 0px
    .tabview-panel
      padding: 0px 8px
  @media print
    padding: .75cm 0 0
.link
  cursor: pointer
  &:hover
    text-decoration: underline
.no-bullet
  list-style-type: none
  margin: 0
  padding: 0
@media screen and (max-width: $breakpoint-xs-max)
  .no-padding-xs > .q-item
    padding-left: 0
    padding-right: 4px
.no-bottom-border-radius
  border-bottom-left-radius: 0
  border-bottom-right-radius: 0
.one-line
  white-space: nowrap
  overflow: hidden
  text-overflow: ellipsis
.cursor-help
  cursor: help
.q-pull-to-refresh .fit > .vertical-middle
  margin-top: 40vh
  padding-top: 20vh
  padding-bottom: 20vh
.mb-row-dense
  margin-bottom: 40px
.icon-smaller .q-icon
  font-size: 1.2em
.q-icon.fas.fa-play
  left: 2px
.q-markdown
  h1
    font-size: 2rem
    line-height: 2rem
    padding: 1rem 0
    font-weight: 500
    margin: 0 0 1rem
  h2
    font-size: 1.5rem
    line-height: 1.5rem
    padding: 0.5rem 0
    font-weight: 500
    margin: 1rem 0 1rem
  h3
    font-size: 1.1rem
    line-height: 1.1rem
    padding: 0.45rem 0
    font-weight: 500
    margin: 1rem 0 1rem
  h4, .q-markdown--heading-h4
    font-size: 1rem
    line-height: 1rem
    padding: 0.25rem 0
    font-weight: 500
    margin: 1rem 0 .3rem
  h5
    font-size: 0.9rem
    font-weight: 500
    margin: 1rem 0
  h6
    font-size: 0.8rem
    margin: 1rem 0
  a, .q-markdown--link
    text-decoration: underline
    border-bottom: 0 none
    color: var(--q-primary)
  .q-markdown--link-external
    &:after
      content: ''
a
  color: var(--q-primary)
.safe-area-horizontal, .q-page-container, .q-banner
  padding-left: env(safe-area-inset-left)
  padding-right: env(safe-area-inset-right)
.safe-area-left
  padding-left: env(safe-area-inset-left)
a
  -webkit-touch-callout: none
.done-button
  width: 100%
  max-width: 280px
.electron.platform-mac
  header .q-toolbar, .window-draggable
    -webkit-app-region: drag
    button
      -webkit-app-region: no-drag
  .navigation-drawer, .q-dialog .q-card
    -webkit-app-region: no-drag
  header .q-toolbar, .fullscreen > .q-toolbar
    min-height: 66px
    padding-top: 20px
  .q-drawer--on-top .navigation-drawer
    padding-top: 20px
.q-notifications__list--top
  top: 50px
  z-index: 1900
.electron.platform-mac .q-notifications__list--top
  top: 66px
body.q-ios-padding .q-notifications__list--top
  top: calc(env(safe-area-inset-top) + 50px)
.save-notification
  margin-top: 6px
  min-height: 24px
  line-height: 1.3
  .q-notification__message
    padding: 0
  .q-notification__actions
    padding: 0
  .q-notification__badge
    border-radius: 32px
    padding: 4px 6px
  .q-notification__badge--top-right
    top: -4px
.save-notification.text-positive
  .q-notification__badge--top-right
    top: 0
    right: -32px
.banner-positive
  background-color: #daf8e1
  .q-btn
    background-color: #9cedaf
.banner-warning
  background-color: #fcf2d7
  .q-btn
    background-color: #f9e09b

